<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        >
               
    <PreferenceCategory
            android:title="@string/application_settings_environment">

        <ListPreference
                android:key="application_settings_profile_pref"
	            android:defaultValue="Development"
                android:title="@string/application_settings_profile"
                android:summary="@string/application_settings_profile_summary"
                android:entries="@array/application_settings_profile_entries"
                android:entryValues="@array/application_settings_profile_entry_values"
                android:dialogTitle="@string/application_settings_profile" />

		<EditTextPreference
                android:key="application_settings_device_id_pref"
	            android:defaultValue="DEV0001"
                android:title="@string/application_settings_device_id"
                android:summary="@string/application_settings_device_id_summary"
                android:dialogTitle="@string/application_settings_device_id" />

		<EditTextPreference
                android:key="application_settings_department_pref"
	            android:defaultValue="INS"
                android:title="@string/application_settings_department"
                android:summary="@string/application_settings_department_summary"
                android:dialogTitle="@string/application_settings_department" />

		<EditTextPreference
                android:key="application_settings_office_phone_pref"
	            android:defaultValue="0410308497"
                android:title="@string/application_settings_office_phone"
                android:summary="@string/application_settings_office_phone_summary"
                android:dialogTitle="@string/application_settings_office_phone" />

		<EditTextPreference
                android:key="application_settings_office_email_pref"
	            android:defaultValue="massimo_celima@tpg.com.au"
                android:title="@string/application_settings_office_email"
                android:summary="@string/application_settings_office_email_summary"
                android:dialogTitle="@string/application_settings_office_email" />

    </PreferenceCategory>
    
</PreferenceScreen>
